--- a/src/components/Expenses/ExpenseItem.module.css
+++ b/src/components/Expenses/ExpenseItem.module.css
@@ -1,23 +1,50 @@
 .expense-item{
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: 0.5rem;
   margin: 1rem 0;
   color: white; 
   background-color: #4b4b4b;
+  border-radius: 12px;
 }
 
-.expense-item h2{
+.expense-item__description{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-grow: 1;
+}
+
+.expense-item__description h2{
   font-size: 1.25rem;
   margin: 0 1rem;
+  flex-grow: 1;
 }
 
 .expense-item__price{
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 1.5rem;
+  font-size: 1.25rem;
   border-radius: 12px;
   border: 1px solid white;
   background-color: #40005d;
-  font-size: 1.25rem;
   font-weight: bold;
+}
+
+
+@media (max-width: 580px) {
+  .expense-item__description{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .expense-item__description h2{
+    font-size: 1rem;
+  }
+
+  .expense-item__price{
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
 }
