--- a/src/components/Expenses/ExpenseItem.module.css
+++ b/src/components/Expenses/ExpenseItem.module.css
@@ -30,6 +30,43 @@
   font-weight: bold;
 }
 
+.expense-item__delete{
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  font-size: 1.25rem;
+  border-radius: 12px;
+  border: 1px solid white;
+  background-color: red;
+  font-weight: bold;
+  margin-left: 0.5rem;
+  width: 6rem;
+  text-align: center;
+}
+
+
+.expense-item__delete:hover,
+.expense-item__delete:active{
+  background-color: rgb(148, 32, 32);
+}
+
+.expense-item__edit{
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  font-size: 1.25rem;
+  border-radius: 12px;
+  border: 1px solid white;
+  background-color: green;
+  font-weight: bold;
+  margin-left: 0.5rem;
+  width: 6rem;
+  text-align: center;
+}
+
+.expense-item__edit:hover,
+.expense-item__edit:active{
+  background-color: rgb(50, 132, 50);
+}
+
 
 @media (max-width: 580px) {
   .expense-item__description{
